[project]
name = "hltb"
version = "0.1.0"
description = "A modern, fast, and easy-to-use Python API wrapper for HowLongToBeat (HLTB), with built-in async support."
readme = "README.md"
authors = [
    { name = "Juan Sebastian Peña", email = "jspenaq@unal.edu.co" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "selectolax>=0.3.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "pyrefly>=0.19.0",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "TC",  # flake8-type-checking
    "TD",  # flake8-todos
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "ANN",  # flake8-annotations
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "COM",  # flake8-commas
    "ICN",  # flake8-import-conventions
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "ANN201", "ANN202", "E402", "E501", "E711"]

[tool.coverage.run]
source = ["src/hltb"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true